sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_basic.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Number(1)),
    Edge(BoundVar(VariableDef(
      var: Variable("x"),
      meta: None,
    ))),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((0, 1, 0)),
  ],
)
