sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_bug-97.mlir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Op(
      name: "op",
      successors: [],
      attributes: "",
      sym_name: None,
      symbols: [],
    )),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Var(
              id: "%0",
            ))),
            Operation(Op(
              name: "op3",
              successors: [],
              attributes: "",
              sym_name: None,
              symbols: [],
            )),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 1, 0)),
          ],
        )),
        Edge(BoundVar(Var(
          id: "%0",
        ))),
        Thunk(Graph(
          nodes: [
            Operation(Op(
              name: "op2",
              successors: [],
              attributes: "",
              sym_name: None,
              symbols: [],
            )),
            Edge(BoundVar(Var(
              id: "%0",
            ))),
            Operation(Op(
              name: "op",
              successors: [],
              attributes: "",
              sym_name: None,
              symbols: [],
            )),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((1, 0, 0)),
            Some((2, 1, 0)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((1, 0, 0)),
        Some((2, 1, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 1, 0)),
  ],
)
