sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_buggy.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("a"))),
    Edge(FreeVar(Variable("b"))),
    Operation(Lambda),
    Edge(Nil),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("a"))),
        Edge(FreeVar(Variable("b"))),
        Edge(BoundVar(Variable("x"))),
        Operation(Lambda),
        Edge(Nil),
        Edge(Nil),
        Thunk(Graph(
          nodes: [
            Edge(FreeVar(Variable("b"))),
            Edge(BoundVar(Variable("y"))),
            Operation(Not),
            Edge(Nil),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 2, 0)),
            Some((2, 3, 0)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((0, 3, 0)),
        Some((4, 3, 1)),
        Some((3, 5, 0)),
        Some((1, 6, 0)),
        Some((6, 4, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((3, 2, 0)),
    Some((2, 4, 0)),
    Some((0, 5, 0)),
    Some((1, 5, 1)),
    Some((5, 3, 0)),
  ],
)
