sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_corrupt.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Plus),
    Edge(BoundVar(VariableDef(
      var: Variable("x"),
      meta: None,
    ))),
    Edge(Nil),
    Edge(BoundVar(VariableDef(
      var: Variable("y"),
      meta: None,
    ))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("x"),
          meta: None,
        ))),
        Operation(Minus),
        Edge(Nil),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((0, 1, 0)),
        Some((1, 2, 0)),
      ],
    )),
    Operation(Number(1)),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 0, 1)),
    Some((0, 3, 0)),
    Some((4, 2, 0)),
    Some((5, 1, 0)),
  ],
)
