sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_empty_bind.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Number(1)),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [],
)
