sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_fact.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(App),
    Edge(BoundVar(VariableDef(
      var: Variable("fact"),
      meta: None,
    ))),
    Edge(Nil),
    Edge(BoundVar(VariableDef(
      var: Variable("a"),
      meta: None,
    ))),
    Operation(Number(5)),
    Operation(Lambda),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("fact"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("x"),
          meta: None,
        ))),
        Operation(If),
        Edge(BoundVar(VariableDef(
          var: Variable("y1"),
          meta: None,
        ))),
        Edge(Nil),
        Edge(BoundVar(VariableDef(
          var: Variable("y4"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("y5"),
          meta: None,
        ))),
        Operation(Number(1)),
        Operation(Times),
        Edge(BoundVar(VariableDef(
          var: Variable("y3"),
          meta: None,
        ))),
        Operation(App),
        Edge(BoundVar(VariableDef(
          var: Variable("y2"),
          meta: None,
        ))),
        Operation(Minus),
        Edge(Nil),
        Operation(Number(1)),
        Operation(Eq),
        Edge(Nil),
        Operation(Number(1)),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((3, 2, 0)),
        Some((4, 2, 1)),
        Some((5, 2, 2)),
        Some((2, 6, 0)),
        Some((7, 4, 0)),
        Some((1, 8, 0)),
        Some((9, 8, 1)),
        Some((8, 5, 0)),
        Some((0, 10, 0)),
        Some((11, 10, 1)),
        Some((10, 9, 0)),
        Some((1, 12, 0)),
        Some((13, 12, 1)),
        Some((12, 11, 0)),
        Some((14, 13, 0)),
        Some((1, 15, 0)),
        Some((16, 15, 1)),
        Some((15, 3, 0)),
        Some((17, 16, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 0, 1)),
    Some((0, 3, 0)),
    Some((4, 2, 0)),
    Some((6, 5, 0)),
    Some((5, 1, 0)),
    Some((1, 7, 0)),
    Some((7, 6, 0)),
  ],
)
